only changed namespce to dev, kept all other naming convention the same as prod

--- a/apps/cnpg-infisical/dev/application.yaml
+++ b/apps/cnpg-infisical/dev/application.yaml
@@ -15,15 +15,15 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: dev
-  ignoreDifferences:
-    - group: ""
-      kind: Secret
-      name: dev-infisical-pg-admin-credentials-secret
-      namespace: dev
-      jsonPointers:
-        - /data/username
-        - /data/password
-  syncPolicy:
-    syncOptions:
-      - RespectIgnoreDifferences=true
+  # ignoreDifferences:
+  #   - group: ""
+  #     kind: Secret
+  #     name: dev-infisical-pg-admin-credentials-secret
+  #     namespace: dev
+  #     jsonPointers:
+  #       - /data/username
+  #       - /data/password
+  # syncPolicy:
+  #   syncOptions:
+  #     - RespectIgnoreDifferences=true
   revisionHistoryLimit: 10
