updated secrete from data to string data

--- a/apps/cnpg-infisical/dev/manifests/secrets/secret-cnpg-infisical-admin-credentials.yaml
+++ b/apps/cnpg-infisical/dev/manifests/secrets/secret-cnpg-infisical-admin-credentials.yaml
@@ -7,6 +7,6 @@ metadata:
   labels:
     cnpg.io/reload: "true"
 type: kubernetes.io/basic-auth
-data:
+stringData:
   username: "${ARGOCD_ENV_INFISICAL_PG_ADMIN_USERNAME}"
   password: "${ARGOCD_ENV_INFISICAL_PG_ADMIN_PASSWORD}"
