--- a/apps/argocd/manifests/overlays/cmp-kustomize-envsubst-sidecar.yaml
+++ b/apps/argocd/manifests/overlays/cmp-kustomize-envsubst-sidecar.yaml
@@ -34,6 +34,8 @@ spec:
           envFrom:
             - secretRef:
                 name: argocd-app-env
+            - secretRef:
+                name: argocd-app-env-dev
           resources:
             requests:
               memory: 256Mi
