reverting schema migration release and ignoring the difference in application

--- a/apps/infisical/application.yaml
+++ b/apps/infisical/application.yaml
@@ -17,3 +17,12 @@ spec:
     namespace: infisical
   syncPolicy: {}
   revisionHistoryLimit: 10
+  ignoreDifferences:
+    - group: batch
+      kind: Job
+      name: infisical-schema-migration-1
+      namespace: infisical
+      jqPathExpressions:
+        - .spec
+        - .metadata.annotations
+        - .metadata.labels
