added redis manifests, will control helm from local, not automated

--- a/apps/redis-authentik/manifests/secrets/secret-redis-authentik-credential.yaml
+++ b/apps/redis-authentik/manifests/secrets/secret-redis-authentik-credential.yaml
@@ -6,19 +6,19 @@ metadata:
   namespace: authentik
 spec:
   resyncInterval: 60
-  hostAPI: "${INFISICAL_HOST_API}"
+  hostAPI: "${ARGOCD_ENV_INFISICAL_HOST_PROD_API}"
   authentication:
     universalAuth:
       credentialsRef:
         secretName: universal-auth-credentials
         secretNamespace: infisical
       secretsScope:
-        projectSlug: "${INFISICAL_PROJECT_SLUG}"
-        envSlug: "${INFISICAL_ENV_SLUG}"
+        projectSlug: "${ARGOCD_ENV_INFISICAL_PROJECT_SLUG}"
+        envSlug: "${ARGOCD_ENV_INFISICAL_ENV_SLUG}"
         secretsPath: "/authentik/redis"
         recursive: true
   managedKubeSecretReferences:
-    - secretName: authentik-redis-admin-credentials-secret
+    - secretName: infisical-secret-authentik-redis-admin-credentials
       secretNamespace: authentik
       secretType: Opaque
       creationPolicy: Owner
