--- a/apps/cnpg-authentik/application.yaml
+++ b/apps/cnpg-authentik/application.yaml
@@ -8,7 +8,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/raulstechtips/cluster-config.git
-    targetRevision: HEAD
+    targetRevision: 18-new-app-add-and-migrate-authentik-to-argocd
     path: apps/cnpg-authentik
     plugin:
       name: kustomize-envsubst
