removed read replicas as it effects first install

--- a/apps/authentik/manifests/secrets/authentik-env-secret.yaml
+++ b/apps/authentik/manifests/secrets/authentik-env-secret.yaml
@@ -30,11 +30,11 @@ spec:
           AUTHENTIK_BOOTSTRAP_TOKEN: "{{ .AUTHENTIK_BOOTSTRAP_TOKEN.Value }}"
           AUTHENTIK_POSTGRESQL__HOST: "{{ .AUTHENTIK_POSTGRESQL__HOST.Value }}"
           AUTHENTIK_POSTGRESQL__SSLROOTCERT: "{{ .SSLROOTCERT.Value }}"
-          AUTHENTIK_POSTGRESQL__READ_REPLICAS__0__HOST: "{{ .AUTHENTIK_POSTGRESQL__HOST.Value }}"
-          AUTHENTIK_POSTGRESQL__READ_REPLICAS__0__NAME: "{{ .AUTHENTIK_POSTGRESQL__NAME.Value }}"
-          AUTHENTIK_POSTGRESQL__READ_REPLICAS__0__PORT: "{{ .AUTHENTIK_POSTGRESQL__PORT.Value }}"
-          AUTHENTIK_POSTGRESQL__READ_REPLICAS__0__SSLMODE: "{{ .AUTHENTIK_POSTGRESQL__SSLMODE.Value }}"
-          AUTHENTIK_POSTGRESQL__READ_REPLICAS__0__SSLROOTCERT: "{{ .SSLROOTCERT.Value }}"
+          # AUTHENTIK_POSTGRESQL__READ_REPLICAS__0__HOST: "{{ .AUTHENTIK_POSTGRESQL__HOST.Value }}"
+          # AUTHENTIK_POSTGRESQL__READ_REPLICAS__0__NAME: "{{ .AUTHENTIK_POSTGRESQL__NAME.Value }}"
+          # AUTHENTIK_POSTGRESQL__READ_REPLICAS__0__PORT: "{{ .AUTHENTIK_POSTGRESQL__PORT.Value }}"
+          # AUTHENTIK_POSTGRESQL__READ_REPLICAS__0__SSLMODE: "{{ .AUTHENTIK_POSTGRESQL__SSLMODE.Value }}"
+          # AUTHENTIK_POSTGRESQL__READ_REPLICAS__0__SSLROOTCERT: "{{ .SSLROOTCERT.Value }}"
           AUTHENTIK_REDIS__HOST: "{{ .AUTHENTIK_REDIS__HOST.Value }}"
           AUTHENTIK_REDIS__TLS: "{{ .AUTHENTIK_REDIS__TLS.Value }}"
           AUTHENTIK_REDIS__TLS_CA_CERT: "{{ .SSLROOTCERT.Value }}"
