--- a/apps/jenkins/values/prod.yaml
+++ b/apps/jenkins/values/prod.yaml
@@ -34,9 +34,9 @@ controller:
   admin:
 
     # -- The key in the existing admin secret containing the username
-    userKey: username
+    userKey: jenkins-admin-user
     # -- The key in the existing admin secret containing the password
-    passwordKey: password
+    passwordKey: jenkins-admin-password
 
     # The default configuration uses this secret to configure an admin user
     # If you don't need that user or use a different security realm, then you can disable it
@@ -44,7 +44,7 @@ controller:
     createSecret: false
 
     # -- The name of an existing secret containing the admin credentials
-    existingSecret:
+    existingSecret: jenkins-admin-credentials
   # -- Email address for the administrator of the Jenkins instance
   jenkinsAdminEmail:
 
