hotfix: updated jenkins admin creds

--- a/apps/jenkins/manifests/secrets/secret-jenkins-admin-credentials.yaml
+++ b/apps/jenkins/manifests/secrets/secret-jenkins-admin-credentials.yaml
@@ -2,7 +2,7 @@
 apiVersion: secrets.infisical.com/v1alpha1
 kind: InfisicalSecret
 metadata:
-  name: infisical-secret-jenkins-github-app
+  name: infisical-secret-jenkins-admin-credentials
   namespace: jenkins
 spec:
   hostAPI: ${ARGOCD_ENV_INFISICAL_PROD_HOST_API}
@@ -17,14 +17,12 @@ spec:
         secretsPath: "/jenkins"
         recursive: true
   managedKubeSecretReferences:
-    - secretName: jenkins-github-app-raulstechtips
+    - secretName: jenkins-admin-credentials
       secretNamespace: jenkins
       secretType: Opaque
       creationPolicy: Owner
       template:
         includeAllSecrets: false
         data:
-          owner: "{{ .GITHUB_APP_OWNER.Value }}"
-          appId: "{{ .GITHUB_APP_ID.Value }}"
-          privateKey: "{{ .GITHUB_APP_PRIVATE_KEY.Value }}"
-          pat: "{{ .GITHUB_APP_PAT.Value }}"
+          jenkins-admin-user: "{{ .JENKINS_ADMIN_USER.Value }}"
+          jenkins-admin-password: "{{ .JENKINS_ADMIN_PASSWORD.Value }}"
