--- a/apps/jenkins/values/prod.yaml
+++ b/apps/jenkins/values/prod.yaml
@@ -44,7 +44,7 @@ controller:
     createSecret: false
 
     # -- The name of an existing secret containing the admin credentials
-    existingSecret: jenkins-admin-credentials
+    existingSecret: jenkins-admin
   # -- Email address for the administrator of the Jenkins instance
   jenkinsAdminEmail:
 
@@ -302,10 +302,10 @@ controller:
 
   # -- List of additional existing secrets to mount
   additionalExistingSecrets:
-    - name: jenkins-admin-credentials
-      keyName: jenkins-admin-user
-    - name: jenkins-admin-credentials
-      keyName: jenkins-admin-password
+    - name: jenkins-admin
+      keyName: user
+    - name: jenkins-admin
+      keyName: password
     - name: jenkins-github-app-raulstechtips
       keyName: appId
     - name: jenkins-github-app-raulstechtips
