hotfix: updated jenkins admin creds

--- a/apps/jenkins/manifests/secrets/secret-jenkins-admin-credentials.yaml
+++ b/apps/jenkins/manifests/secrets/secret-jenkins-admin-credentials.yaml
@@ -17,12 +17,12 @@ spec:
         secretsPath: "/jenkins"
         recursive: true
   managedKubeSecretReferences:
-    - secretName: jenkins-admin
+    - secretName: jenkins-admin-credentials
       secretNamespace: jenkins
       secretType: Opaque
       creationPolicy: Owner
       template:
         includeAllSecrets: false
         data:
-          user: "{{ .JENKINS_ADMIN_USER.Value }}"
-          password: "{{ .JENKINS_ADMIN_PASSWORD.Value }}"
+          jenkins-admin-user: "{{ .JENKINS_ADMIN_USER.Value }}"
+          jenkins-admin-password: "{{ .JENKINS_ADMIN_PASSWORD.Value }}"
