--- a/apps/jenkins/values/prod.yaml
+++ b/apps/jenkins/values/prod.yaml
@@ -41,7 +41,7 @@ controller:
     # The default configuration uses this secret to configure an admin user
     # If you don't need that user or use a different security realm, then you can disable it
     # -- Create secret for admin user
-    createSecret: false
+    createSecret: true
 
     # -- The name of an existing secret containing the admin credentials
     existingSecret: jenkins-admin-credentials
