hotfix: updated jenkins admin creds

--- a/apps/argocd/manifests/base/secrets/secret-argocd-app-env.yaml
+++ b/apps/argocd/manifests/base/secrets/secret-argocd-app-env.yaml
@@ -45,5 +45,6 @@ spec:
           ARGOCD_ENV_CLOUDFLARE_EMAIL: "{{ .CLOUDFLARE_EMAIL.Value }}"
           ARGOCD_ENV_CLOUDFLARE_API_TOKEN: "{{ .CLOUDFLARE_API_TOKEN.Value }}"
           ARGOCD_ENV_GITHUB_HOOKS_IP: "{{ .GITHUB_HOOKS_IP.Value }}"
+          ARGOCD_ENV_VPN_IP: "{{ .VPN_IP.Value }}"
           ARGOCD_ENV_JENKINS_LIVE_DOMAIN: "{{ .JENKINS_LIVE_APP.Value }}.{{ .DOMAIN.Value }}"
           ARGOCD_ENV_JENKINS_PROD_DOMAIN: "{{ .JENKINS_APP.Value }}.{{ .DOMAIN.Value }}"
