--- a/apps/jenkins/manifests/ingress/live.yaml
+++ b/apps/jenkins/manifests/ingress/live.yaml
@@ -15,6 +15,8 @@ spec:
       middlewares:
         - name: github-hooks-ips
           namespace: jenkins
+        - name: vpn-ip-acl
+          namespace: default
         - name: default-headers
           namespace: default
       services:
