hotfix: updated network acl for traefik to control access to applications

--- a/apps/traefik/kustomization.yaml
+++ b/apps/traefik/kustomization.yaml
@@ -15,4 +15,5 @@ resources:
   - manifests/ingress/prod.yaml
   - manifests/middleware/middleware-default-headers.yaml
   - manifests/middleware/middleware-secret-traefik-dashboard-auth-credentials.yaml
+  - manifests/middleware/middleware-vpn-ip-acl.yaml
   - manifests/secrets/secret-traefik-dashboard-auth-credentials.yaml
