--- a/apps/jenkins/manifests/ingress/middleware/middleware-github-hooks-ip-allowlist.yaml
+++ b/apps/jenkins/manifests/ingress/middleware/middleware-github-hooks-ip-allowlist.yaml
@@ -9,6 +9,7 @@ spec:
     sourceRange:
       # GitHub Meta API as of 4 May 2025 – refresh monthly!
       - ${ARGOCD_ENV_GITHUB_HOOKS_IP}
+      - ${ARGOCD_ENV_VPN_IP}
       - 192.30.252.0/22
       - 185.199.108.0/22
       - 140.82.112.0/20
@@ -17,3 +18,26 @@ spec:
       - 2606:50c0::/32
     ipStrategy:
       depth: 1
+    excludeIPs:
+      - 173.245.48.0/20
+      - 103.21.244.0/22
+      - 103.22.200.0/22
+      - 103.31.4.0/22
+      - 141.101.64.0/18
+      - 108.162.192.0/18
+      - 190.93.240.0/20
+      - 188.114.96.0/20
+      - 197.234.240.0/22
+      - 198.41.128.0/17
+      - 162.158.0.0/15
+      - 104.16.0.0/13
+      - 104.24.0.0/14
+      - 172.64.0.0/13
+      - 131.0.72.0/22
+      - 2400:cb00::/32
+      - 2606:4700::/32
+      - 2803:f800::/32
+      - 2405:b500::/32
+      - 2405:8100::/32
+      - 2a06:98c0::/29
+      - 2c0f:f248::/32
