hotfix: updated jenkins acl parameters to grab tailnet ip

--- a/apps/jenkins/manifests/ingress/middleware/middleware-github-hooks-ip-allowlist.yaml
+++ b/apps/jenkins/manifests/ingress/middleware/middleware-github-hooks-ip-allowlist.yaml
@@ -18,7 +18,7 @@ spec:
       - 2606:50c0::/32
     ipStrategy:
       depth: 1
-      excludeIPs:
+      excludedIPs:
         - 173.245.48.0/20
         - 103.21.244.0/22
         - 103.22.200.0/22
