hotfix: middleware is referenced in the wrong namesapce

--- a/apps/longhorn/manifests/ingress/prod.yaml
+++ b/apps/longhorn/manifests/ingress/prod.yaml
@@ -14,7 +14,7 @@ spec:
       kind: Rule
       middlewares:
         - name: vpn-ip-acl
-          namespace: default
+          namespace: traefik
         - name: default-headers
           namespace: default
       services:
