--- a/apps/traefik/manifests/middleware/middleware-vpn-ip-acl.yaml
+++ b/apps/traefik/manifests/middleware/middleware-vpn-ip-acl.yaml
@@ -3,7 +3,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: vpn-ip-acl
-  namespace: default
+  namespace: traefik
 spec:
   ipAllowList:
     sourceRange:
