--- a/apps/jenkins/manifests/ingress/middleware/middleware-github-hooks-ip-allowlist.yaml
+++ b/apps/jenkins/manifests/ingress/middleware/middleware-github-hooks-ip-allowlist.yaml
@@ -10,6 +10,7 @@ spec:
       # GitHub Meta API as of 4 May 2025 – refresh monthly!
       - ${ARGOCD_ENV_GITHUB_HOOKS_IP}
       - ${ARGOCD_ENV_VPN_IP}
+      - 10.0.0.0/8 # Allow all internal K3s IPs
       - 192.30.252.0/22
       - 185.199.108.0/22
       - 140.82.112.0/20
